src/App.css
#container {
  flex-grow: 1;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 24px;
}

.logo {
  width: 134.732px;
  height: 20px;
  flex-shrink: 0;
}

.topbar {
  display: flex;
  width: 1016px;
  padding: 16px 16px 16px 24px;
  justify-content: space-between;
  align-items: center;
  border-radius: 72px;
  border: 1px solid #dfe3e7;
  background: var(--BFI-WHITE, #f3f4f5);
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.04);
}

#topbar-center-div {
  display: flex;
  align-items: center;
  gap: 32px;
}

#topbar-center-div a {
  color: var(--BFI-BLACK, #191c1f);
  font-variant-numeric: ordinal;
  font-feature-settings: "ss03" on, "ss01" on, "salt" on;
  font-family: Mona Sans;
  font-size: 18px;
  font-style: normal;
  font-weight: 500;
  line-height: 24px; /* 133.333% */
  text-decoration: none;
}

#topbar-center-div a:hover {
  color: rgba(25, 28, 31, 0.8);
}

#topbar-button {
  display: flex;
  padding: 8px 16px;
  justify-content: center;
  align-items: center;
  gap: 8px;
  border-radius: 56px;
  background: var(--BFI-BLACK, #191c1f);
  cursor: pointer;
  color: var(--BFI-WHITE, #f3f4f5);
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  text-transform: capitalize;
  line-height: 24px;
  font-family: Mona Sans;
}

#topbar-button:hover {
  background: rgba(25, 28, 31, 0.8);
}

#center-container {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 24px;
  width: 700px;
}

#main-title {
  text-align: center;
  font-variant-numeric: stacked-fractions;
  font-feature-settings: "salt" on;
  font-family: Space Grotesk;
  font-size: 88px;
  font-style: normal;
  font-weight: 700;
  line-height: 88px; /* 100% */
  background: linear-gradient(281deg, #0b6ef9 -23.52%, #f4f4f4 65.58%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  margin: 0;
}

#center-sub-text {
  color: var(--BFI-WHITE, #f3f4f5);
  text-align: center;
  font-family: Mona Sans;
  font-variant-numeric: stacked-fractions;
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px; /* 120% */
}

#center-button {
  display: flex;
  padding: 8px 16px;
  justify-content: center;
  align-items: center;
  gap: 8px;
  border-radius: 56px;
  border: 1px solid #2459a5;
  background: linear-gradient(276deg, #0b6ef9 -11.16%, #0d3b7d 110.83%);
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  color: var(--BFI-WHITE, #f3f4f5);
  font-family: Mona Sans;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px;
  text-transform: capitalize;
  cursor: pointer;
}

#center-button:hover {
  background: linear-gradient(276deg, #0b6ef9 -11.16%, #0b6ef9 110.83%);
}

#background-logo {
  position: fixed;
  height: 100%;
  top: -40px;
  overflow: hidden;
  object-fit: contain;
  opacity: 1;
  z-index: -1;
}

.bottom-bar {
  display: flex;
  width: 1016px;
  padding: 24px;
  justify-content: space-between;
  align-items: center;
  border-radius: 96px;
  border: 1px solid #dfe3e7;
  background: var(--BFI-WHITE, #f3f4f5);
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.04);
}

#logo-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 24px;
}

.bottom-bar-logo {
  height: 100%;
}

.bottom-bar-text {
  color: var(--BFI-BLACK, #191c1f);
  text-align: center;
  font-variant-numeric: stacked-fractions;
  font-family: Mona Sans;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 24px; /* 150% */
}

.launching-soon {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 16px;
  opacity: 0.6;
  color: var(--BFI-WHITE, #f3f4f5);
  text-align: center;
  font-variant-numeric: stacked-fractions;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 24px; /* 150% */
}

#inner-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 48px;
  width: 100%;
}

/*# hamburger menu */
.menu-btn {
  display: flex;
  flex-direction: column;
  cursor: pointer;
  padding: 20px;
  z-index: 3;
}

.btn-line {
  width: 30px;
  height: 1px;
  background-color: var(--BFI-WHITE, #f3f4f5);
  margin: 4px 0;
  transition: transform 0.3s ease-in-out;
}

.mobile-menu {
  position: fixed;
  top: 0;
  right: -100vw;
  width: 100vw;
  min-height: -webkit-fill-available;
  overflow: hidden;
  background: radial-gradient(50% 50% at 50% 50%, #0b1f3a 0%, #191c1f 100%);
  padding-top: 100px;
  padding-bottom: 16px;
  transition: right 0.3s ease;
  z-index: 2;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.mobile-menu ul {
  list-style: none;
  padding: 0;
}

.mobile-menu ul li {
  padding: 15px;
}

.mobile-menu ul li a {
  color: var(--BFI-WHITE, #f3f4f5);
  font-family: Mona Sans;
  font-size: 32px;
  font-style: normal;
  font-weight: 500;
  line-height: 40px; /* 125% */
  text-transform: capitalize;
  text-decoration: none;
}

.menu-btn.active .btn-line:nth-child(1) {
  transform: translateY(4px) rotate(45deg);
}

.menu-btn.active .btn-line:nth-child(2) {
  transform: translateY(-4px) rotate(-45deg);
}

.menu-btn.active + .mobile-menu {
  right: 0;
}

#join-waitlist {
  display: flex;
  padding: 8px 16px;
  justify-content: center;
  align-items: center;
  gap: 8px;
  border-radius: 56px;
  background: var(--BFI-WHITE, #f3f4f5);
  color: var(--BFI-BLACK, #191c1f);
  text-align: center;
  font-family: Mona Sans;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px;
  text-transform: capitalize;
  cursor: pointer;
}

.mobile {
  display: none;
}

@media screen and (max-width: 1024px) {
  .bottom-bar {
    width: 100%;
  }

  .topbar {
    width: 100%;
  }
}

@media screen and (max-width: 768px) {
  #container {
    padding: 16px;
  }

  #inner-container .bottom-bar {
    display: none;
  }

  .bottom-bar {
    background: none;
    flex-direction: column;
    box-shadow: none;
    border: none;
    gap: 8px;
    padding: 0;
  }

  .bottom-bar-text {
    color: var(--BFI-WHITE, #f3f4f5);
    text-align: center;
    font-variant-numeric: stacked-fractions ordinal;
    font-feature-settings: "ss03" on, "ss01" on, "salt" on;
    font-family: Mona Sans;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px; /* 150% */
    opacity: 0.6;
  }

  .bottom-bar-logo {
    opacity: 0.5;
    height: 15px;
  }

  #center-container {
    width: 100%;
  }

  #main-title {
    font-size: 48px;
  }

  #center-sub-text {
    font-size: 18px;
  }

  .topbar-mobile {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    z-index: 2;
  }

  .topbar-mobile .logo {
    position: relative;
    z-index: 3;
  }

  .mobile {
    display: flex;
  }

  .desktop {
    display: none;
  }
}

